apps/desktop/src-tauri/test_output.txt
   Compiling spellbook-desktop v0.1.0 (C:\Users\vitki\OneDrive\GitHub\runecalico-ai\second_edition_spellbook\apps\desktop\src-tauri)
error[E0382]: borrow of moved value: `replace_incoming`
    --> src\commands\import.rs:3876:32
     |
3865 |         let replace_incoming = test_spell("Moon Lance", 3, "Replacement description");
     |             ---------------- move occurs because `replace_incoming` has type `canonical_spell::CanonicalSpell`, which does not implement the `Copy` trait
...
3868 |         let replace_item = preview_item_for_test(replace_incoming);
     |                                                  ---------------- value moved here
...
3876 |         let replace_new_hash = replace_incoming.compute_hash().expect("replace spell hash");
     |                                ^^^^^^^^^^^^^^^^ value borrowed here after move
     |
note: consider changing this parameter type in function `preview_item_for_test` to borrow instead if owning the value isn't necessary
    --> src\commands\import.rs:2702:41
     |
2702 |     fn preview_item_for_test(mut spell: CanonicalSpell) -> PreviewSpellJsonItem {
     |        ---------------------            ^^^^^^^^^^^^^^ this parameter takes ownership of the value
     |        |
     |        in this function
help: consider cloning the value if the performance cost is acceptable
     |
3868 |         let replace_item = preview_item_for_test(replace_incoming.clone());
     |                                                                  ++++++++

error[E0382]: borrow of moved value: `keep_both_incoming`
    --> src\commands\import.rs:3877:47
     |
3866 |         let keep_both_incoming = test_spell("Twin Flame", 4, "Imported twin");
     |             ------------------ move occurs because `keep_both_incoming` has type `canonical_spell::CanonicalSpell`, which does not implement the `Copy` trait
...
3869 |         let keep_both_item = preview_item_for_test(keep_both_incoming);
     |                                                    ------------------ value moved here
...
3877 |         let mut keep_both_spell_with_suffix = keep_both_incoming.clone();
     |                                               ^^^^^^^^^^^^^^^^^^ value borrowed here after move
     |
note: consider changing this parameter type in function `preview_item_for_test` to borrow instead if owning the value isn't necessary
    --> src\commands\import.rs:2702:41
     |
2702 |     fn preview_item_for_test(mut spell: CanonicalSpell) -> PreviewSpellJsonItem {
     |        ---------------------            ^^^^^^^^^^^^^^ this parameter takes ownership of the value
     |        |
     |        in this function
help: consider cloning the value if the performance cost is acceptable
     |
3869 |         let keep_both_item = preview_item_for_test(keep_both_incoming.clone());
     |                                                                      ++++++++

warning: unused variable: `replace_new_hash`
    --> src\commands\import.rs:3871:13
     |
3871 |         let replace_new_hash = replace_item.content_hash.clone();
     |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_replace_new_hash`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `keep_both_new_hash`
    --> src\commands\import.rs:3872:13
     |
3872 |         let keep_both_new_hash = keep_both_item.content_hash.clone();
     |             ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_keep_both_new_hash`

warning: unused variable: `new_hash`
    --> src\commands\import.rs:3992:13
     |
3992 |         let new_hash = incoming_item.content_hash.clone();
     |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_new_hash`

warning: unused variable: `replace_old_hash`
    --> src\commands\import.rs:4085:13
     |
4085 |         let replace_old_hash = test_hash(&replace_existing_spell);
     |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_replace_old_hash`

warning: unused variable: `keep_both_old_hash`
    --> src\commands\import.rs:4086:13
     |
4086 |         let keep_both_old_hash = test_hash(&keep_both_existing_spell);
     |             ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_keep_both_old_hash`

warning: unused variable: `keep_both_new_hash`
    --> src\commands\import.rs:4089:13
     |
4089 |         let keep_both_new_hash = "q".repeat(64);
     |             ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_keep_both_new_hash`

warning: unused variable: `keep_both_incoming`
    --> src\commands\import.rs:4119:13
     |
4119 |         let keep_both_incoming = test_spell("Solar Knot", 2, "Incoming keep both");
     |             ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_keep_both_incoming`

warning: unused variable: `old_hash`
    --> src\commands\import.rs:4217:13
     |
4217 |         let old_hash = test_hash(&existing_spell);
     |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_old_hash`

warning: unused variable: `collision_hash`
    --> src\commands\import.rs:4218:13
     |
4218 |         let collision_hash = test_hash(&conflicting_spell);
     |             ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_collision_hash`

For more information about this error, try `rustc --explain E0382`.
warning: `spellbook-desktop` (lib test) generated 9 warnings
error: could not compile `spellbook-desktop` (lib test) due to 2 previous errors; 9 warnings emitted
